-Spirit horseman's armor pieces can now be shimmered into the other pieces, as follows: Pumpkin Head -> Chestmail -> Greaves -> back to Pumpkin Head
-Simplified the tooltip description for the undying embryo
-Strange cyst is no longer a usable item, you now have to right click the giant egg with it in your inventory to start the egg incursion


Enemies & Bosses:

-Added pitch variance to various custom enemy and boss sounds in the mod
-Lowered the orange spooky ghost critter spawnrate
-Lowered the spawn rate of the gloopers in the cemetery
-Nerfed giant tortumor contact damage from 65 to 40
-Added new sprites for big bone's thorn attacks to make them look better
-Defeating big bone will now automatically unlock the catacomb guardian's bestiary entry
-Made orro & boro's thorn pillars taller
-Added a new visual effect for boro's acid breath attack
-Moco, orro, and boro will now drop one sentient heart for each active player in the world the first time you defeat them, instead of only one


Miscellaneous:

-Spooky mod's pylons now give off colored lighting like vanilla ones do
-The vanilla eerie theme will now play in the spooky forest and swampy cemetery during blood moons
-Resprited the spooky forest and swampy cemetery backgrounds to make them look better
-Added better player following AI for the fuzz bat pet
-Removed the following enemies from the mod: haunted skull, distended, distended brute, capillary, visitant
-Eye valley grass can now grow the ambient eye stalks and tentacles naturally




~BUGS AND OTHER FIXES~

-Fixed the spooky scroll causing the player sprite direction to spaz out if your cursor was in the middle of your player
-Fixed both regular tortumor and giant tortumor's orb projectiles not dealing any damage
-Fixed issue where spooky mod's custom tile drawing would draw horrible wrong if you are using retro or trippy lighting

